--- a/src/components/landing/Services.module.scss
+++ b/src/components/landing/Services.module.scss
@@ -47,6 +47,9 @@
 
   .serviceCard {
     padding: 2rem;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 
     .icon {
       font-size: 3rem;
@@ -66,6 +69,7 @@
       color: $text-light-secondary;
       line-height: 1.6;
       margin-bottom: 1.5rem;
+      flex-grow: 1; // Push list to bottom if needed, or keep text growing
     }
 
     ul {
