--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -121,3 +121,7 @@ a {
 .delay-400 { animation-delay: 0.4s; }
 .delay-500 { animation-delay: 0.5s; }
 .delay-600 { animation-delay: 0.6s; }
+
+.h-full {
+  height: 100%;
+}
